--- a/shorturl/lib.ini
+++ b/shorturl/lib.ini
@@ -7,10 +7,10 @@ url = http://moyaproject.com
 [lib]
 title = Moya URL shortener
 url = http://moyaproject.com
-namespace =
+namespace = http://moyaproject.com/shorturl
 name = moya.shorturl
 location = ./logic
-version = 1.0.0-beta
+version = 1.0.0
 
 [py:shortkey]
 location = ./py
@@ -24,4 +24,6 @@ exclude = *.pyc
 	.*
     *~
 
+[documentation]
+location = ./docs
 
